# Tester

./: .gitignore  CMakeLists.txt
src/: Funcs.c  Funcs.h  Strategies.c  Strategies.h  Tester.c  Tester.h  Trader.h  bars.c  bars.h  config.c  config.h  main.c
